--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.4",
+    "sharp": "^0.33.2",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
