--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@preline/overlay": "^2.0.2",
+    "dompurify": "^3.0.8",
     "next": "14.0.4",
     "preline": "^2.0.3",
     "react": "^18",
