--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
     "@preline/overlay": "^2.0.2",
     "dompurify": "^3.0.8",
     "next": "14.0.4",
     "preline": "^2.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "sharp": "^0.33.2",
     "zustand": "^4.5.0"
