--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.12",
     "@preline/overlay": "^2.0.2",
     "dompurify": "^3.0.8",
+    "micromatch": "^4.0.5",
     "next": "14.0.4",
     "preline": "^2.0.3",
     "react": "^18",
